crates/flowlog-build/tests/errors/typechecker/cast_unknown_type.dl
.decl R(x: number)
.decl Out(y: number)
.input R(IO="file", filename="R.csv", delimiter=",")
.output Out
Out(as(x, NoSuchType)) :- R(x).
